# pyPFC

./: .gitignore  404.html  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PyTorch.txt  README.md  SECURITY.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/: copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml  performance_issue.yml
.github/workflows/: docs.yml  python-publish.yml
api/complete_api/: index.html
api/core/: index.html
api/pypfc/: index.html
api/pypfc_base/: index.html
api/pypfc_grid/: index.html
api/pypfc_io/: index.html
api/pypfc_ovito/: index.html
api/pypfc_pre/: index.html
docs/: 404.html  examples.md  index.md  installation.md  quick_start.md  sitemap.xml  troubleshooting.md
docs/api/: complete_api.md  core.md  pypfc.md  pypfc_base.md  pypfc_grid.md  pypfc_io.md  pypfc_ovito.md  pypfc_pre.md
docs/examples/: index.html
docs/quick_start/: index.html
docs/troubleshooting/: index.html
examples/: ex00_density_field.py  ex01_grain_growth.py  ex02_grain_boundary_migration.py  ex03_polycrystal_solidification.py  ex04_quick_start.py  ex05_structure_analysis.py  index.html
installation/: index.html
quick_start/: index.html
search/: search_index.json
site/: 404.html  index.html  objects.inv  sitemap.xml
site/examples/: index.html
src/: pypfc.py  pypfc_aux.py  pypfc_base.py  pypfc_grid.py  pypfc_io.py  pypfc_ovito.py  pypfc_pre.py
stylesheets/: extra.css
troubleshooting/: index.html
(+12 files in other folders)
